@@ -31,6 +31,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] defaults and 'stealth' mode for two tone frequencies in setup->tests
 - [add] pause button in the info bar buttons to pause the display. The radio etc will continue when paused, noise floor calculations will not
 - [add] experimental pulsed/pecker tune available in Setup->Transmit. (Tune only, not available for TwoTone)
+- [add] options to prevent sleep/screen saver in Setup->Options->Options2
 - [change] exporting a tx profile will now ask for destination location and filename. It will complain if filename already exists
 - [change] restored step attenuator RX1 if HERMES is used. Unsure why I disabled it a few years ago
 - [change] the bespoke TCI command tx_frequency has changed back to the following as per the TCI protocol, tx_frequency:3700000; .There is now a bespoke Thetis message also sent out at the same time, tx_frequency_thetis:3700000,b80m,false,false;
@@ -45,6 +46,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [change] refactored midi wheel code to try and remove the lag when spinning a wheel very fast. Slider/knob will still have same issue. Behringer devices PL-1/Micro/etc do not use this new code
 - [change] rx filter can now be +-20kHz wide to mirror TX filter widths. Shift also needs to be set as that will (at the moment) imply a width limit
 - [change] WDSP has had some optimisations and caching added. For example if you change the filter size to something that has been calculated before it will be much faster the second time. Has improved start up time, mode switching etc etc.
+- [change] WDSP updated to version 1.26. 
 - [fix] mic disable/enable button on front end will now disable the mic at startup if set as off. Note: its state is saved as part of the tx profile
 - [fix] fixed rare out of bounds issue in memory ScheduleUpdate
 - [fix] cat IF command fix where an error (O;) message would be returned if an unsupported TuneStep was in use. This bug has existed since 25/02/2007
